force-app/main/default/objects/Loyalty_Reward_Insights__c/Loyalty_Reward_Insights__c.object-meta.xml
<CustomObject>
    <label>Loyalty &amp; Reward Insights</label>
    <nameField>
        <displayFormat>LRI-{0000}</displayFormat>
        <label>Loyalty &amp; Reward Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty &amp; Reward Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>