force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Coupon_Redemption_Rate__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Redemption_Rate__c</fullName>
    <label>Coupon Redemption Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>