force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty &amp; Reward Insights</relationshipLabel>
    <relationshipName>Loyalty_Reward_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>