force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/High_Value_Reward_Utilization__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Reward_Utilization__c</fullName>
    <label>High-Value Reward Utilization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>