force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Loyalty_Membership_Age__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Membership_Age__c</fullName>
    <label>Loyalty Membership Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>