force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Loyalty_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Balance__c</fullName>
    <label>Loyalty Points Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>