force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Points_Earned_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned_Last_12_Months__c</fullName>
    <label>Points Earned (Last 12 Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>