force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Points_Redemption_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Points_Redemption_Frequency__c</fullName>
    <label>Points Redemption Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>