force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Referral_Conversion_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Conversion_Count__c</fullName>
    <label>Referral Conversion Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>