force-app/main/default/objects/Loyalty_Reward_Insights__c/fields/Referral_Participation_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Participation_Status__c</fullName>
    <label>Referral Participation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>